--- a/src/componentes/Formulario/Formulario.css
+++ b/src/componentes/Formulario/Formulario.css
@@ -1,10 +1,11 @@
 .formulario{
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     margin: 80px 0;
+
 }
 .formulario form{
-    max-width: 80%;
+    width: 30%;
     background-color: #F6F6F6;
     box-shadow: 7px 7px 15px  rgba(0, 0, 0, 0.25);
     border-radius: 20px;
