--- a/src/componentes/Formulario/Formulario.css
+++ b/src/componentes/Formulario/Formulario.css
@@ -1,15 +1,18 @@
 .formulario{
     display: flex;
     justify-content: space-evenly;
-    margin: 80px 0;
+    margin: 80px 50px;
+    flex-wrap: wrap;
+    gap:20px;
 
 }
 .formulario form{
-    width: 30%;
+
     background-color: #F6F6F6;
     box-shadow: 7px 7px 15px  rgba(0, 0, 0, 0.25);
     border-radius: 20px;
     padding: 8px 100px;
+    flex: 1;
 }
 
 .formulario h2{
